Fix parsing of |url()| to treat it like the URI "" instead of as an error. Bug 203256, r+sr=dbaron, a=brendan